--- a/Lecture_19062019/Freestyle.Rmd
+++ b/Lecture_19062019/Freestyle.Rmd
@@ -69,38 +69,9 @@ HFCminmax <- HFC %>% group_by(Country,
  		   MABminmax = MABmax | MABmin,
  		   MABgroup = ifelse(MABmax, "max MAB",ifelse(MABmin,"min MAB",NA))) %>% filter(!is.na(MABgroup) & TFR < 6) %>% 
 	ungroup() 
-
-# From the above, it seems like we have a lot of potential
-# grouping variables
-HFCminmax2 <- HFC %>% 
- 	group_by(
- 	          Country, 
- 			  Year1,
- 			  Region, 
- 			  Urban, 
- 			  Origin, 
- 			  Collection, 
- 			  SourceType,
- 			  RefCode,
- 			  Vitality,
- 			  AgeDef) %>% 
- 	mutate(TFR = sum(ASFR, na.rm = TRUE),
- 		   MAB = sum(Age * ASFR, na.rm = TRUE) / TFR,
- 		   TFRint = TFR - TFR %% .25) %>% # can change TFR interval 
- 	ungroup() %>% 
- 	group_by(TFRint) %>% 
- 	mutate(MABmax = MAB == max(MAB),
- 		   MABmin = MAB == min(MAB),
- 		   MABminmax = MABmax | MABmin,
- 		   MABgroup = ifelse(MABmax, "max MAB",ifelse(MABmin,"min MAB",NA))) %>% 
- 	filter(MABminmax & TFR < 6) %>% 
- 	ungroup()
-
-
-
 ```
 
-5. now the goal is to draw a ridge plot of ASFR, where each ridge is a discrete bin of TFR in uniform intervals (maybe 8 - 15 different steps or so). Within each ridge there will be two distributions: The ASFR curve with the highest MAB and the one with the lowest MAB.
+5. Now the goal is to draw a ridge plot of ASFR, where each ridge is a discrete bin of TFR in uniform intervals (maybe 8 - 15 different steps or so). Within each ridge there will be two distributions: The ASFR curve with the highest MAB and the one with the lowest MAB.
 
 ```{r, fig.height = 10}
  p <- ggplot(HFCminmax,
